# minivmac

./: .gitignore
setup/: BLDUTIL3.i  CNFGOPTS.i  CONFIGUR.i  WRTEXTFL.i  tool.c
src/: CMakeLists.txt
